--- a/webshop/assets/css/cart.css
+++ b/webshop/assets/css/cart.css
@@ -63,10 +63,7 @@ body {
     text-align: center;
 }
 
-/* .cart-item .stt {
-    flex-basis: 50px; 
-    flex-grow: 0;
-} */
+
 
 .cart-item .thumbnail img {
     width: 120px;
@@ -141,31 +138,40 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-}
-
-
-.top-nav {
-    width: 100%;
-    height: 50px;
     background-color: #001f5d;
+    z-index: 1000;
+    height: 65px;
 }
+
+nav img{
+    width:100px;
+    border-radius:50%; 
+    margin-left:30px;
+    margin-right:30px;
+    height:100px;
+    
+}
+
+
 
 nav {
     display: flex;
     align-items: center; 
     border-bottom: 1px solid black;
     padding: 0 20px; 
-    background-color: #fff;
+    background-color:#001f5d;
+    
+
 }
 
 ul {
     display: flex;
-    height: 60px;
+    height: 65px;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fff;
+    background-color:#001f5d;
     align-items: center; 
     flex-grow: 1; 
 }
@@ -175,20 +181,26 @@ ul {
     align-items: center; 
     justify-content: space-evenly; 
     font-size: 25px; 
-    color: #333; 
+  
     width: 200px; 
 }
 
 .nav-icon a {
     text-decoration: none;
-    color: #333;
+    color: #fcfcfc;
+}
+.nav-icon a:hover{
+    color:yellow;
 }
 
-
 li a {
-    color: #333;
+    color: #ffffff;
     text-decoration: none;
-    padding: 25px;
+    padding: 20px;
+}
+
+li a:hover{
+    color:rgb(251, 251, 125);
 }
 
 img {
@@ -196,25 +208,100 @@ img {
 }
 
 
-
-.footer-trangchu {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
-    background-color: #001f5d;
-    border-top: 1px solid #ccc;
-    position: relative; /* Hoặc remove nếu không cần thiết */
+footer {
+    display: flex; 
+    height:230px;
+    padding: 20px; 
+    background-color:#001f5d; 
+    border-top: 1px solid #ccc; 
+  
     bottom: 0;
     left: 0;
     width: 100%;
-    margin-top: 100px;
+    margin-top:100px;
+    color:white;
+    font-size:23px;
+
+}
+.diachi img{
+    border-radius:50%;
+    margin-left:70px;
+    margin-top:30px;
+}
+.diachi img:hover{
+    border :4px solid yellow;
 }
 
-.footer-trangchu h3 {
+.diachi{
+    padding-left:50px;
+    width:35%;
+    
+}
+
+.fanpage{
+    width:30%;
+    margin-left:30px;
+}
+
+.fanpage img{
+    border-radius:50%;
+    height:130px;
+    margin-top:50px;
+    margin-left:50px;
+    
+}
+
+.fanpage img:hover{
+    border :4px solid yellow;
+}
+
+
+.zalo{
+    width:30%;
+    margin-left:30px;
+    padding-right:30px;
+}
+
+.zalo img{
+    margin-top:30px;
+    margin-left:45px;
+}
+
+
+
+.imggioithieu{
+    width:100%;
+    padding-top:20px;
+    
+}
+
+.imggioithieu img{
+    width:100%;
+
+}
+
+.underheader {
+    position: absolute;
+    top: 65px; 
+    left: 0;
+    width: 100%;
+    background-color: #faf7f7;
+    display: flex;
+    align-items: center;
+    gap: 10px;
     margin: 0;
-    font-size: 16px;
-    color: #fff;
+    height: 40px;
+    z-index: 999;   
+}
+
+.underheader_content{
+    padding:0px 30px;
+}
+.underheader a {
+    text-decoration: none;
+    color: #2F80ED;
+    margin:5px;
+    
 }
 
 
