--- a/webshop/assets/css/login.css
+++ b/webshop/assets/css/login.css
@@ -6,13 +6,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 50%;
+    background: #f2f2f2;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    min-height: 100vh;
-    background: #f2f2f2;
-    overflow: hidden; 
 }
 
 .container {
@@ -22,7 +21,8 @@ body {
     background: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    margin-top: 200px; 
+    margin: auto;
+    margin-top: 100px;
 }
 
 .panel-heading {
@@ -93,78 +93,190 @@ body {
     align-items: center;
 }
 
+.transform {
+    margin-top: 15px;
+    text-align: left;
+}
+
+.transform > a {
+    color: blue;
+    text-decoration: none;
+    font-size: 15px;
+}
+
 /* Header, footer */
 header {
-    position: fixed; 
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    background-color: #001f5d;
     z-index: 1000;
+    height: 65px;
 }
 
-.top-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #001f5d;
+nav img{
+    width:100px;
+    border-radius:50%; 
+    margin-left:30px;
+    margin-right:30px;
+    height:100px;
+    
 }
 
 nav {
     display: flex;
-    align-items: center;
+    align-items: center; 
     border-bottom: 1px solid black;
-    padding: 0 20px;
-    background-color: #fff;
+    padding: 0 20px; 
+    background-color:#001f5d;
+    
+
 }
 
 ul {
     display: flex;
-    height: 60px;
+    height: 65px;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #fff;
-    align-items: center;
-    flex-grow: 1;
+    background-color:#001f5d;
+    align-items: center; 
+    flex-grow: 1; 
 }
 
 .nav-icon {
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    font-size: 25px;
-    color: #333;
-    width: 200px;
+    align-items: center; 
+    justify-content: space-evenly; 
+    font-size: 25px; 
+    width: 120px; 
 }
 
 .nav-icon a {
     text-decoration: none;
-    color: #333;
+    color: #fcfcfc;
+}
+.nav-icon a:hover{
+    color:yellow;
 }
 
 li a {
-    color: #333;
+    color: #ffffff;
     text-decoration: none;
-    padding: 25px;
+    padding: 20px;
+}
+
+li a:hover{
+    color:rgb(251, 251, 125);
 }
 
 img {
     width: 150px;
 }
 
-.footer-trangchu {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 20px;
-    background-color: #001f5d;
-    border-top: 1px solid #ccc;
+
+footer {
+    display: flex; 
+    height:230px;
+    padding: 20px; 
+    background-color:#001f5d; 
+    border-top: 1px solid #ccc; 
+  
+    bottom: 0;
+    left: 0;
     width: 100%;
-    margin-top: auto;
+    margin-top:100px;
+    color:white;
+    font-size:23px;
+
+}
+.diachi img{
+    border-radius:50%;
+    margin-left:70px;
+    margin-top:30px;
+}
+.diachi img:hover{
+    border :4px solid yellow;
 }
 
-.footer-trangchu h3 {
-    margin: 0;
-    font-size: 16px;
-    color: #fff;
+.diachi{
+    padding-left:50px;
+    width:35%;
+    
+}
+
+.fanpage{
+    width:30%;
+    margin-left:30px;
+}
+
+.fanpage img{
+    border-radius:50%;
+    height:130px;
+    margin-top:50px;
+    margin-left:50px;
+    
+}
+
+.fanpage img:hover{
+    border :4px solid yellow;
+}
+
+
+.zalo{
+    width:30%;
+    margin-left:30px;
+    padding-right:30px;
+}
+
+.zalo img{
+    margin-top:30px;
+    margin-left:45px;
+}
+
+
+.imggioithieu{
+    width:100%;
+    padding-top:20px;
+    
+}
+
+.imggioithieu img{
+    width:100%;
+
+}
+
+.index{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+
+}
+
+.underheader {
+    position: absolute;
+    top: 65px; 
+    left: 0;
+    width: 100%;
+    background-color:#faf7f7;
+    height: 50px;
+    z-index: 999;
+} 
+
+.underheader_content{
+    margin: 16px 50px;
+}
+
+.underheader a {
+    text-decoration: none;
+    color: #2F80ED;
+    margin:5px;
+    
+} 
+
+.font-bold{
+    font-weight:bold;
 }
